# Astrum

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  main.py  meson.build  mirror.env
.github/workflows/: ci-cd.yml
data/: gschemas.compiled  meson.build  org.aetherde.Astrum.desktop.in  org.aetherde.Astrum.gresource.xml  org.aetherde.Astrum.gschema.xml  style.css
docker/: INSTALL-APPARMOR.md  README.md  alpine-cross.txt  appimage.Dockerfile  appimage.yml  appimagetools.yml  astrum-test.apparmor  build.sh  deb.Dockerfile  pacman.Dockerfile  rpm.Dockerfile  test.Dockerfile
po/: LINGUAS  POTFILES  astrum.pot  ba.po  be.po  bg.po  ckb.po  crh.po  cv.po  en.po  he_IL.po  it.po  kaa.po  kk.po  kk_Latn.po  la.po  lv.po  meson.build  mn_Cyrl.po  mn_Mong.po  nl.po  pl.po  pt.po  ru.po  sr.po  tt.po  uk.po  uz.po  xal.po
src/: application.vala  clipboard-manager.vala  config.vala.in  file-item.vala  file-manager.vala  file-view.vala  meson.build  path-bar.vala  preferences-dialog.vala  properties-dialog.vala  sidebar.vala  utils.vala  window.vala
